date place shifting solved

--- a/src/Clock/style.css
+++ b/src/Clock/style.css
@@ -1,8 +1,20 @@
+.clock__container {
+  display: grid;
+}
+
 .clock {
     font-size: 12px;
     color: white;
-    display: flex;
-    justify-content: center;
-    line-height: 1.5;
-    padding: 10px 0;
+    display: grid;
+    grid-template-columns: 1fr 68px;
+    padding: 8px 0;
+    margin: 0 auto 0;
+  }
+
+  .clock__date {
+    text-align: left;
+  }
+
+  .clock__hour {
+    text-align: right;
   }
