--- a/src/Container/style.css
+++ b/src/Container/style.css
@@ -1,4 +1,4 @@
 .container {
-    max-width: 560px;
+    max-width: 530px;
     margin: 14px auto 40px;
 }
